--- a/oh-package.json5
+++ b/oh-package.json5
@@ -1,13 +1,15 @@
 {
-  "name": "harmonymynote",
-  "version": "1.0.0",
-  "description": "Please describe the basic information.",
-  "main": "",
-  "author": "",
   "license": "",
-  "dependencies": {
-  },
   "devDependencies": {
     "@ohos/hypium": "1.0.11"
+  },
+  "author": "",
+  "name": "harmonymynote",
+  "description": "Please describe the basic information.",
+  "main": "",
+  "version": "1.0.0",
+  "dynamicDependencies": {},
+  "dependencies": {
+    "@ohos/axios": "^2.2.4"
   }
 }
